css/style.css
:root {
  --malone-dark-blue: rgb(26, 65, 104);
  --malone-light-blue: rgb(73, 162, 178);
}

body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.fullscreen {
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

.container {
  margin: auto;
}

.floatingTab {
  position: fixed;
  bottom: var(--safe-area-inset-bottom);
  left: 0px;
  right: 0px;
  border-radius: 0px;
}
.nav-link {
  color: #000;
  text-align: center;
}

.nav-link * {
  display: block;
}

nav {
  z-index: 100;
  background-color: white;
}

.tab-content .tab-pane {
  height: calc(100vh - 150px);
  overflow-y: scroll;
  width: 100%;
  align-items: center;
  justify-content: center;
}
.icon {
  display: block;
  text-align: center;
}

.big-nav-icon {
  font-size: 28px;
}

.small-nav-label {
  font-size: 12px;
  padding-top: 1px;
}

h1 {
 background-color: var(--malone-light-blue);
 color: white;
 padding: 10px;
 width: 100%;
 position: sticky;
 top: 0;
 z-index: 10;
}

h2 {
 background-color: var(--malone-light-blue);
 color: white;
 padding: 10px;
 width: 100%;
 position: sticky;
 top: 60px; /* Adjusted to prevent overlap with h1 */
 z-index: 9;
 font-style: italic;
}

.form-label {
	font-weight: bold;
}

